--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^4.4.1",
+    "firebase": "^7.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.2.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "shards-react": "^1.0.0",
-    "classnames": "^2.2.6"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "shards-react": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
