--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
+    "redux-firestore": "^0.11.0",
     "redux-thunk": "^2.3.0",
     "shards-react": "^1.0.0"
   },
